Footer fixed alignment issues with social icons on smaller devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -72,7 +72,7 @@ strong{
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
-  font-size: 17px;
+  font-size: 1.1rem;
   font-family: "Roboto", sans-serif;
 }
 
@@ -343,7 +343,7 @@ footer{
 
 .social-links li a i{
   padding-top: 20px;
-  font-size: 40px;
+  font-size: 2rem;
   width: 50px;
   text-align: center;
   text-decoration: none;
@@ -354,6 +354,12 @@ footer{
 .social-align{
 text-align: center;    
 }
+
+.list-inline-item:not(:last-child){
+    margin-right: 0;
+}
+
+
 
 /* Image Formatting*/
 
